--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -78,9 +78,11 @@
                      <h5 class="card-title">@<%= review.author.username %></h5>
                      <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
                      <p class="card-text"><%= review.comment %></p>
-                     <form class="mb-3" method="POST" action="/listings/<%= listing._id%>/reviews/<%= review._id%>?_method=DELETE">
-                          <button class="btn btn-sm btn-dark">Delete</button>
-                      </form>
+                     <% if(currUser && review.author && review.author._id.equals(currUser._id)) { %>
+                            <form class="mb-3" method="POST" action="/listings/<%= listing._id%>/reviews/<%= review._id%>?_method=DELETE">
+                               <button class="btn btn-sm btn-dark">Delete</button>
+                            </form>
+                     <% } %>    
                  </div>
              </div>
         <% } %>
